[package]
name = "scuffle-settings"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-settings"
license = "MIT OR Apache-2.0"
description = "Tools for managing configuration from environment variables or config files."
keywords = ["settings", "configuration", "environment", "config"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
config = { version = "0.14", default-features = false }
clap = { version = "4", optional = true }
minijinja = { version = "2.5", optional = true, features = ["json", "custom_syntax", "urlencode"] }
serde = "1"
thiserror = "2"
anyhow = { version = "1.0", optional = true }
scuffle-bootstrap = { workspace = true, optional = true }
scuffle-workspace-hack.workspace = true

[features]
cli = ["clap"]
ron = ["config/ron"]
toml = ["config/toml"]
yaml = ["config/yaml"]
json = ["config/json"]
json5 = ["config/json5"]
ini = ["config/ini"]
templates = ["minijinja"]

all-formats = ["toml", "json", "yaml", "json5", "ini", "ron"]
full = ["all-formats", "templates", "cli", "bootstrap"]
bootstrap = ["scuffle-bootstrap", "anyhow", "cli"]

[package.metadata.xtask]
additive-features = [
    "cli",
    "ron",
    "toml",
    "yaml",
    "json",
    "json5",
    "ini",
    "templates",
    "all-formats",
    "full",
    "bootstrap",
]
