[package]
name = "scuffle-signal"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-signal"
license = "MIT OR Apache-2.0"
description = "Ergonomic async signal handling."
keywords = ["signal", "async"]

[dependencies]
tokio = { version = "1.41.1", default-features = false, features = ["signal"] }
scuffle-bootstrap = { version = "0.0.1", path = "../bootstrap", optional = true }
scuffle-context = { version = "0.0.1", path = "../context", optional = true }
anyhow = { version = "1.0", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
tokio = { version = "1.41.1", features = ["macros", "rt", "time"] }
libc = "0.2"
futures = "0.3"

[features]
bootstrap = ["scuffle-bootstrap", "scuffle-context", "anyhow", "tokio/macros"]
default = []
