[package]
name = "scuffle-signal"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-signal"
license = "MIT OR Apache-2.0"
description = "Ergonomic async signal handling."
keywords = ["signal", "async"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
tokio = { version = "1", default-features = false, features = ["signal"] }
scuffle-bootstrap = { workspace = true, optional = true }
scuffle-context = { workspace = true, optional = true }
anyhow = { version = "1", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
tokio = { version = "1.41.1", features = ["macros", "rt", "time"] }
tokio-test = "0.4.4"
libc = "0.2"
futures = "0.3"
scuffle-future-ext.workspace = true

[features]
bootstrap = ["scuffle-bootstrap", "scuffle-context", "anyhow", "tokio/macros"]
