[package]
name = "scuffle-transmuxer"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.5"
bytes = "1.5"

scuffle-h264.workspace = true
scuffle-h265.workspace = true
scuffle-aac.workspace = true
scuffle-mp4.workspace = true
scuffle-av1.workspace = true
scuffle-flv.workspace = true
scuffle-amf0.workspace = true
scuffle-bytes-util.workspace = true
scuffle-workspace-hack.workspace = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
