[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

# This package is a special package as its used by developers to run commands in the workspace.
# Therefore we should try to keep the dependencies to a minimum. If you need to add a command that is
# particularly heavy that includes a lot of dependencies consider adding it to a separate specialized
# package.

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
cargo_metadata = "0.19.1"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml_edit = "0.22"
