[package]
name = "scuffle-batching-examples"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[[example]]
name = "scuffle-batching-dataloader"
path = "src/dataloader.rs"

[dependencies]
scuffle-batching.workspace = true
tokio = { version = "1", features = ["full"] }
scuffle-workspace-hack.workspace = true
